--- a/.env
+++ b/.env
@@ -1,27 +1,16 @@
 PORT=8080
-NODE_ENV=development
-
-# ---- Auth ----
-AUTH_MODE=DEV_JWT         # DEV_JWT or COGNITO
-JWT_HS256_SECRET=super-secret-dev-key
-DEFAULT_ORG_ID=org-demo   # used by DEV_JWT
-DEFAULT_ROLES=user        # comma-separated: user,org_admin,platform_admin
-
-# ---- AWS ----
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=secure-vault-bucket
-AWS_KMS_KEY_ID=arn:aws:s3:::secure-vault-bucket
-
-# ---- Cognito (only if AUTH_MODE=COGNITO) ----
-# COGNITO_ISS=https://cognito-idp.ap-southeast-2.amazonaws.com/ap-southeast-2_XXXXXXXXX
-# COGNITO_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# ---- DynamoDB tables ----
-DDB_FILES_META=FilesMeta
-DDB_ACL=Acl
-DDB_AUDIT=AuditEvents
-DDB_USERS=Users
-DDB_ORGS=Orgs
-
-# ---- Shares ----
-SHARE_LINK_TTL_SECONDS=604800
+S3_REGION=us-east-1
+S3_BUCKET=secure-buckett
+AWS_ACCOUNT_ID=342448511865
+DDB_TABLE=Users
+USER_SK=USER
+JWT_SECRET=super-secret
+CORS_ORIGINS=http://localhost:3000,https://d1e7o1ng62c5j.cloudfront.net
+# Optional (enable Cognito+MFA)
+COGNITO_USER_POOL_ID=us-east-1_VtAWhNMGe
+COGNITO_CLIENT_ID=1pmec3gc10lc09qpa499h8k7uo
+# Optional notifications
+SNS_TOPIC_ARN=arn:aws:sns:us-east-1:342448511865:securevault-alerts
+SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/342448511865/Secure_que
+FORCE_COGNITO_ONLY=true
