--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.896.0",
     "@aws-sdk/client-dynamodb": "^3.888.0",
     "@aws-sdk/client-kms": "^3.645.0",
-    "@aws-sdk/client-s3": "^3.888.0",
+    "@aws-sdk/client-s3": "^3.896.0",
     "@aws-sdk/client-ses": "^3.645.0",
-    "@aws-sdk/client-sns": "^3.645.0",
+    "@aws-sdk/client-sns": "^3.896.0",
+    "@aws-sdk/client-sqs": "^3.896.0",
     "@aws-sdk/client-sts": "^3.888.0",
     "@aws-sdk/lib-dynamodb": "^3.888.0",
     "@aws-sdk/lib-storage": "^3.888.0",
-    "@aws-sdk/s3-request-presigner": "^3.645.0",
+    "@aws-sdk/s3-request-presigner": "^3.896.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
