Changes made for malicious code

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ COGNITO_CLIENT_ID=1pmec3gc10lc09qpa499h8k7uo
 SNS_TOPIC_ARN=arn:aws:sns:us-east-1:342448511865:securevault-alerts
 SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/342448511865/Secure_que
 FORCE_COGNITO_ONLY=true
+
+DDB_TABLE_NAME=NapierHashes
