--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cloudvault-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "dynamo.js",
   "scripts": {
-    "dev": "node server.js",
-    "start": "NODE_ENV=production node server.js"
+    "dev": "node dynamo.js",
+    "start": "NODE_ENV=production node dynamo.js",
+    "test": "jest --ci --watchAll=false"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.896.0",
@@ -30,5 +31,8 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.7"
+  },
+  "devDependencies": {
+    "jest": "^30.1.3"
   }
 }
